sw btlr wrting mode: implement document model

btLr is not a writing mode that would be used by any natural language,
the reason it makes sense to support this is that the Word UI makes it
easy to rotate text 90 degrees counter-clockwise for Latin (lrtb) text,
which then triggers this feature. This is common in the first column of
tables to create text that looks like a row header.

An import-time workaround to handle <w:textDirection w:val="btLr"/> was
added in commit c2d1ab73165d5fa19037e6244b1d634c6c455efc (tentative fix
for fdo#30474#, 2010-11-26), but rotating text at a text portion level
has various unwanted side effects, just counting my own fixes, I had 7
workarounds on top of that workaround to hide problems where the root
cause is this missing writing direction in sw core.

This commit just extends the sw core doc model, everything else is to be
done in follow-up commits.

Change-Id: I89e02cd4b40de78699dbf14885fc128e870de3b8
Reviewed-on: https://gerrit.libreoffice.org/67717
Reviewed-by: Miklos Vajna <vmiklos@collabora.com>
Tested-by: Jenkins
(cherry picked from commit db346dde6179e7414289681d91b153a6ed259d05)